Fixing jumping page when in advanced filter for news search

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -8205,8 +8205,10 @@ a[href*="http"] .article-header__date {
 .js-search_filter__is-open .footer-region {
   display: none; }
 
-.js-search_filter__is-open .contextual-region {
-  position: inherit; }
+.js-search_filter__is-open .contextual-region,
+.js-search_filter__is-open .scrolled {
+  position: inherit;
+  top: auto; }
 
 .js-search_filter__is-open form {
   padding: 0; }
