--- a/docroot/themes/custom/ucsf/scss/views/_view-news-filter.scss
+++ b/docroot/themes/custom/ucsf/scss/views/_view-news-filter.scss
@@ -531,8 +531,10 @@
   }
 
   // Kill contextual links when filter is open.
-  .contextual-region {
+  .contextual-region,
+  .scrolled {
     position: inherit;
+    top: auto;
   }
 
   form {
